# forward-gradient

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml
benchmark/: analyze.py  benchfunctions.py  figures.py  make.py  test.py
data/: experiments-0.csv
notebooks/: dev.ipynb  show.ipynb
scripts/: adam_vs_adabelief_vs_sgd.nvn  beale.nvn  rosenbrock.nvn  week_profiles_adabelief.nvn  week_profiles_adam.nvn  week_profiles_sgd.nvn
scripts/Heartbeat/: CDL.nvn
src/forward/: __init__.py  grad.py  objectives.py  optimisers.py  samplers.py
tests/: test_import.py
