[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "forward"
readme = "README.md"
authors = [
    {name = "Gabriel Belouze", email = "gabriel.belouze@lokad.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.9" # necessary for type hints
license = {"file" = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "pandas >= 1.4.2",
    "matplotlib >= 3.5.2",
    "autograd >= 1.4",
    "numpy >= 1.22.3",
    "click >= 8.1.3",
    "rich >= 12.4.1"
]

[tool.flit.module]
name = "forward"

[project.urls]
source = "https://github.com/gbelouze/forward"
tracker = "https://github.com/gbelouze/forward/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pre-commit"
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
